--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -21,7 +21,7 @@ code.hljs {
 	font-style: italic;
 	border-left: 3px solid gray;
 	padding-left: 10px;
-	margin: 0px 0.5em;
+	margin: 0 0.5em;
 }
 
 .markdown-preview a {
